2003-04-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gdm2.

2003-03-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-icon-theme,
	gnome-vfs, eel, and nautilus.

2003-03-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for yelp.

2003-03-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-mime-data.

2003-03-29  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Removed gpaint.

2003-03-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Removed gimp-gap and added red-carpet.

2003-03-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Added gimp-gap.

2003-03-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added battfink.

2003-03-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-media.

2003-03-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for gnome-desktop.

2003-03-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed branch for vte.

2003-03-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-pim is not part of Fifth Toe.

2003-03-05  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Added mlview.

2003-03-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Massive changes; tried to correct the
	modules used for 2.2 Fifth Toe by using the Fifth Toe web site.
	Again.

2003-02-26  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>

	* translation-status.xml: removed anjuta2 module. It's not mature
	enough.

2003-02-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: evolution is *NOT* part of Fifth Toe.

2003-02-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo and libbonobui have been
	branched. Reflect this.
