@@ -1550,26 +1550,6 @@
       </component>
     </version>
   </module>
-  <module name="gtranslator">
-    <version release="gnome-1.4">
-      <component name="gtranslator" dir="gtranslator" group="extras">
-	<podir dir="po"/>
-	<potname name="gtranslator.pot"/>
-	<branch name="gtranslator-gnome-1"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.2">
-      <component name="gtranslator" dir="gtranslator" group="extras">
-        <podir dir="po"/>
-        <potname name="gtranslator.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="gturing">
     <version release="gnome-1.4">
       <component name="gturing" dir="gturing" group="extras">
