@@ -1,3 +1,8 @@
+2003-04-15  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Removed gtranslator at maintainer's
+	request (gtranslator is dead).
+
 2003-04-12  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Fixed branch for gdm2.
